# dioxus-gallery

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/dioxus-gallery/: Cargo.toml
crates/dioxus-gallery/src/: frame.rs  frame_path.rs  lib.rs  mode.rs  percent.rs  registry.rs  shell.rs  story.rs  view.rs  viewport.rs
